<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MayBanHang.Ver1</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_restaurant">RestaurantActivity</string>
    <string name="title_activity_shop">ShopActivity</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_register"><b>Sign in</b> or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_forgot_password">Recover lost password</string>
    <string name="login_progress_signing_in">Signing in&#8230;</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <color name="tt_top_background">#02537e</color>
    <color name="tt_background">#0f62bb</color>
    <color name="White">#ffffff</color>
    <color name="bg_chef">#ebeff3</color>
    <color name="boder_chef">#aec0d3</color>
    <color name="ChietKhauColor">#00d9dd</color>

    <string name="dat_hang">Đặt bàn</string>
    <string name="xep_ban">Xếp bàn</string>
    <string name="ket_phien">Kết phiên</string>
    <string name="ghi_chu">Ghi chú</string>
    <string name="gop_ban">Gộp bàn</string>
    <string name="chuyen_ban">Chuyển bàn</string>
    <string name="xoa">Xóa</string>
    <string name="ho_ten">Khách lẻ</string>
    <string name="nhom_kh">Nhóm khách buôn bán</string>

    <color name="order_item">#000000</color>

    <string name="thanh_toan">Thanh Toán</string>
    <string name="luu">Lưu</string>
    <string name="btn_in">In</string>
    <string name="btn_xoa">Xóa</string>
    <string name="tong_hang">Tổng hàng</string>
    <string name="giam_ga">Giảm giá</string>
    <string name="vat">VAT</string>
    <string name="thanh_tien">Thành tiền</string>

    <color name="bg_chiet_khau">#025a81</color>

    <string name="san_pham">Sản phẩm</string>
    <string name="search_hint">Tìm kiếm sản phẩm</string>
    <string name="title_activity_chef">ChefActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="khoa">Khóa</string>
    <string name="dat_lai">Đặt lại</string>
    <string name="tra_hang">Trả hàng</string>
    <string name="tien_ich">Tiện Ích</string>
    <string name="luu_tam">Lưu Tạm</string>
    <string name="tien_phai_tra">Tổng hóa đơn</string>

    <color name="black">#000000</color>

    <string name="tien_khach_tra">Tiền khách trả</string>
    <string name="tien_thua">Tiền thừa</string>
    <string name="thanh_toan_in">Thanh toán + In</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="khu_vuc">Khu vực</string>
    <string name="Tat_ca">Tất cả</string>
    <color name="Orange">#FF9900</color>
    <string name="dongy">Đồng ý</string>
    <string name="huy">Hủy bỏ</string>
    <string name="don_gia_ban">Đơn giá bán</string>
    <string name="chon_so_luong">Chọn số lượng bán</string>
    <string name="gopban_chontang">CHỌN TẦNG CẦN GỘP</string>

</resources>
