<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="600dp"
    android:background="@android:color/black"
    android:layoutMode="clipBounds"
    android:padding="15dp" >

    <Button
        android:id="@+id/btn_close_calculator"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignParentRight="true"
        android:background="@drawable/close_dialog_thanhtoan" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:layout_toLeftOf="@+id/btn_close_calculator"
        android:text="@string/tien_phai_tra"
        android:textColor="@color/White"
        android:textSize="15sp" >

    </TextView>

    <TextView
        android:id="@+id/tv_tien_phai_tra"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_below="@id/title"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/bg_black_btn_calculator"
        android:gravity="right|center_vertical"
        android:textColor="@color/black"
        android:textSize="35sp" />

    <GridLayout
        android:id="@+id/result_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_tien_phai_tra"
        android:layout_marginTop="10dp"
        android:columnCount="2"
        android:rowCount="2">

        <TextView
            style="@style/thanhtoan_text"
            android:layout_column="0"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:layout_row="0"
            android:text="@string/tien_khach_tra"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_TienKhachTra"
            style="@style/thanhtoan_text"
            android:layout_width="150dp"
            android:layout_height="55dp"
            android:layout_column="0"
            android:layout_gravity="fill"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_row="1"
            android:background="@drawable/bg_black_btn_calculator"
            android:gravity="right|center_vertical"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <TextView
            style="@style/thanhtoan_text"
            android:layout_column="1"
            android:layout_margin="5dp"
            android:layout_row="0"
            android:text="@string/tien_thua"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_TienThua"
            style="@style/thanhtoan_text"
            android:layout_width="145dp"
            android:layout_height="55dp"
            android:layout_column="1"
            android:layout_gravity="right|center_vertical"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_row="1"
            android:background="@drawable/bg_black_btn_calculator"
            android:gravity="right|center_vertical"
            android:textColor="@color/black"
            android:textSize="25sp" />

    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/result_table"
        android:columnCount="4"
        android:columnWidth="320dp"
        android:orientation="horizontal"
        android:padding="5dp"
        android:rowCount="5"
        android:useDefaultMargins="true" >

        <Button
            android:id="@+id/Btn_cal_thanh_toan"
            style="@style/button_orange_style"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:layout_row="4"
            android:text="@string/thanh_toan" />

        <Button
            android:id="@+id/Btn_thanh_toan_in"
            style="@style/button_orange_style"
            android:layout_column="2"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:layout_row="4"
            android:text="@string/thanh_toan_in" />

        <Button
            android:id="@+id/btn_calcu_7"
            style="@style/button_black_style"
            android:layout_column="0"
            android:layout_row="0"
            android:text="7" />

        <Button
            android:id="@+id/btn_calcu_8"
            style="@style/button_black_style"
            android:layout_column="1"
            android:layout_row="0"
            android:text="8" />

        <Button
            android:id="@+id/btn_calcu_9"
            style="@style/button_black_style"
            android:layout_column="2"
            android:layout_gravity="fill_horizontal"
            android:layout_row="0"
            android:text="9" />

        <ImageButton
            android:id="@+id/btn_calcu_delete"
            style="@style/button_black_style"
            android:layout_height="65dp"
            android:layout_column="3"
            android:layout_gravity="fill_horizontal"
            android:layout_row="0"
            android:src="@drawable/back_calculate" />

        <Button
            android:id="@+id/btn_calcu_4"
            style="@style/button_black_style"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_row="1"
            android:text="4" />

        <Button
            android:id="@+id/btn_calcu_5"
            style="@style/button_black_style"
            android:layout_column="1"
            android:layout_row="1"
            android:text="5" />

        <Button
            android:id="@+id/btn_calcu_6"
            style="@style/button_black_style"
            android:layout_column="2"
            android:layout_gravity="fill_horizontal"
            android:layout_row="1"
            android:text="6" />

        <Button
            android:id="@+id/btn_calcu_enter"
            style="@style/button_orange_style"
            android:layout_column="3"
            android:layout_gravity="fill_vertical|fill_horizontal"
            android:layout_row="1"
            android:layout_rowSpan="3"
            android:text="="
            android:textSize="35sp" />

        <Button
            android:id="@+id/btn_calcu_1"
            style="@style/button_black_style"
            android:layout_column="0"
            android:layout_row="2"
            android:text="1" />

        <Button
            android:id="@+id/btn_calcu_2"
            style="@style/button_black_style"
            android:layout_column="1"
            android:layout_row="2"
            android:text="2" />

        <Button
            android:id="@+id/btn_calcu_0"
            style="@style/button_black_style"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:layout_row="3"
            android:text="0" />

        <Button
            android:id="@+id/btn_calcu_point"
            style="@style/button_black_style"
            android:text="," />

        <Button
            android:id="@+id/btn_calcu_3"
            style="@style/button_black_style"
            android:layout_column="2"
            android:layout_row="2"
            android:text="3" />

    </GridLayout>

</RelativeLayout>