<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/framelayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="818dp"
        android:layout_height="425dp"
        android:background="@android:color/white"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/LinearLayout1"
            android:layout_width="325dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="@android:color/white"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/ImageView01"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal|center_vertical"
                android:src="@drawable/soluong_item_icon" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:background="@color/ChonSoLuongBackground"
            android:orientation="vertical" >

            <RelativeLayout
                android:id="@+id/info_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/tv_name_product"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="60dp"
                    android:layout_marginTop="30dp"
                    android:text="Samsung Galaxy S5"
                    android:textColor="@android:color/white"
                    android:textSize="32sp" />

                <TextView
                    android:id="@+id/tv_label_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@id/tv_name_product"
                    android:layout_below="@id/tv_name_product"
                    android:text="Số lượng trong kho :"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_product_quantityInStore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@id/tv_label_price"
                    android:layout_toEndOf="@id/tv_label_price"
                    android:text="120"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/change_quantity_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/tv_quantiy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_toStartOf="@+id/btn_bonus"
                    android:background="@drawable/bg_dongia_soluong"
                    android:paddingBottom="5dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="5dp"
                    android:text="20"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/ChonSoLuongBackground" />

                <ImageButton
                    android:id="@+id/btn_bonus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignStart="@id/btn_bonus"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="30dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/icon_soluong_bonus" />

                <ImageButton
                    android:id="@+id/btn_minus"
                    style="android:imageButtonStyle "
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@id/tv_quantiy"
                    android:background="@android:color/transparent"
                    android:src="@drawable/icon_soluong_minus" />

                <TextView
                    android:id="@+id/tv_product_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="80dp"
                    android:background="@drawable/bg_dongia_soluong"
                    android:padding="10dp"
                    android:text="125,000"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/ChonSoLuongBackground" />

                 <TextView
                     android:id="@+id/tv_product_price_label"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignStart="@id/tv_product_price"
                     android:layout_below="@id/tv_product_price"
                     android:layout_marginTop="5dp"
                     android:text="@string/don_gia_ban"
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     android:textColor="@color/White" />

                 <TextView
                     android:id="@+id/tv_chon_tang"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignBaseline="@+id/tv_product_price_label"
                     android:layout_alignBottom="@+id/tv_product_price_label"
                     android:layout_alignLeft="@+id/btn_minus"
                     android:text="@string/chon_so_luong"
                     android:textAppearance="?android:attr/textAppearanceMedium" />

            </RelativeLayout>

            <GridLayout
                android:id="@+id/btn_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:columnCount="2"
                android:orientation="vertical"
                android:rowCount="1" >

                <Button
                    android:id="@+id/btn_huy"
                    android:layout_width="176dp"
                    android:layout_column="1"
                    android:layout_gravity="fill"
                    android:layout_marginBottom="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginTop="40dp"
                    android:layout_row="0"
                    android:background="@drawable/soluong_huy_icon"
                    android:text="@string/huy"
                    android:textColor="@color/White"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/btn_dongy"
                    android:layout_width="202dp"
                    android:layout_column="0"
                    android:layout_gravity="fill"
                    android:layout_margin="40dp"
                    android:layout_row="0"
                    android:background="@drawable/soluong_dongy_icon"
                    android:text="@string/dongy"
                    android:textColor="@color/White"
                    android:textSize="20sp" />

            </GridLayout>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="290dp"
        android:layout_marginTop="167dp" >

        <ImageView
            android:id="@+id/ticker"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/soluong_icon" />
    </RelativeLayout>

</FrameLayout>
